# meshtastic-server

./: .gitignore  .gitmodules  README.md  flake.nix
api-server/: Cargo.toml  DOCS.md  build.rs
api-server/dummy-mesh/: main.ts  package.json
api-server/src/: config.rs  main.rs  mqtt.rs  pathfinding.rs  proto.rs  routes.rs  utils.rs
mqtt-broker/: README.md  generate_demo_certs.sh  mosquitto.conf  permissions.acl
