[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
bytes = "1.10.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
envy = "0.4.2"
log = "0.4.25"
once_cell = "1.20.3"
prost = "0.13"
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
prost-build = "0.13"
